Trying to fix white space 6

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -10,6 +10,7 @@ body,
 html,
 #root {
     min-height: 100%;
+    background-color: #11182770;
 }
 
 #root {
